static/styles.css
/* Universal Styles */
* {
    border-radius: 0.25rem;
}

/* Font styles */
h1, h2, h3 {
  font-family: "Archivo Black", sans-serif;
}

h2 {
    font-size: 2rem;
}

p, a, label, input {
    font-family: "Inter", sans-serif;
    font-size: 16px;
    font-optical-sizing: auto;
}

input {
    min-height: 30px;
    border: 1.5px solid dimgrey;
}

/* Header block: fixed @ top of page, contains logo, title, navbar */
header {
    display: block;
    /* Fix header block to top of viewport */
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: fit-content;
    min-height: 70px;
}

/* Header container */
.header-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    height: 100%;
    min-height: 70px;
    background-color: white;
    border-radius: 0;
    border-bottom: 1px solid black;
    gap: 20px;
    padding: 0 20px;
}

/* Nav block */
nav {
    margin-left: auto;
}

/* Navbar container */
.navlink-container {
    display: flex;
    flex-direction: row;
    gap: 10px;
}

/* Navlinks */
.navbar .navlink {
    list-style: none;
    margin: 5px;
    padding: 5px 10px;
    text-align: center;
}

/* Navlink hover animation */
.navbar .navlink:hover {
    background-color: black;
    color: white;
    transition: 0.15s;
}

/* Menu button to toggle navbar for mobile aspect ratio */
#menu-button {
    display: none;
    margin-left: auto;
    padding: 5px;
}

.gap {
    /* Gap should be the height of header block + margin */
    height: 67px; 
}

footer {
    border-radius: 0;
    border-top: 1px solid black;
    padding: 20px;
    text-align: center;
}

/* PAGE STRUCTURES */
/* General page section to keep spacing consistent between sections */
.page-section {
    padding: 5rem 7rem;
}

.bg-light {
    background-color: #F0F0F0;
}

/* One section "grid" */
.sub-section {
    margin: 3rem 0;
}

/* Two section grid template */
.two-section-grid {
    display: grid;
    grid-template-areas: 
        "left-section right-section";
    grid-template-columns: 1fr 1fr;
}

.two-section-grid > * {
    padding: 0 40px;
}

.left-section {
    grid-area: "left-section";
    padding-left: 0;
}

.right-section {
    grid-area: "right-section";
    padding-right: 0;
}

/* CONTAINERS */
.context-container {
    padding: 5rem 10rem;
    text-align: center;
}

.how-it-works {
    text-align: center;
}

.method-container {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 20px;
}

.method {
    padding: 1.5rem;
    width: 250px;
    height: 250px;
    text-align: center;
}

.team-container {
    display: flex;
    justify-content: center;
    gap: 20px;
}

.teammate {
    width: fit-content;
    height: fit-content;
    text-align: center;
}

.login-container {
    display: flex;
    justify-content: center;
    width: 100%
}

.form-container {
    display: flex;
    flex-direction: column;
    gap: 30px;
}

.form-field {
    grid-template-columns: 1fr 3fr;   
}

.submit-container {
    display: flex;
    justify-content: center;
}

.contact-container {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
}

/* Remove default styling for links */
.clear-link-styles {
    text-decoration: none;
    color: inherit;
}

/* Lighter text */
.whisper {
    color: dimgrey;
}

/* BUTTON STYLES */
.button-default {
    display: block;
    width: fit-content;
    min-width: 150px;
    margin: 2rem 0;
    padding: 1.2rem;
    background-color: black;
    color: white;
    border: 1px solid transparent;
}

.button-default:hover, #navlink-emphasized:hover {
    background-color: white;
    color: black;
    border: 1px solid black;
    transition: 0.15s
}

/* Specific IDs */
#intro-text {
    margin: inherit;
    font-size: 3.75rem;
}

#navlink-emphasized {
    background-color: black;
    color: white;
    border: 1px solid transparent;   
}

#comments {
    min-height: 85px;
}

/* Mobile styles */
@media (max-width: 768px) {
    
    .navbar {
        display: none;
        background-color: white;
    }

    .navlink-container {
        flex-direction: column;
        gap: normal;
        padding-right: 40px;
        padding-bottom: 10px;
        border-bottom: 1px solid black;
    }

    /* Navlinks */
    .navbar .navlink {
        text-align: left;
    }

    /* Active navbar for mobile menu toggle */
    .navbar.active {
        display: block;
        position: fixed;
        top: 70px;
        left: 0;
        width: 100vw;
        height: fit-content;
    }

    #menu-button {
        display: block;
    }

    .page-section, .left-section, .right-section{
        text-align: center;
        place-items: center;
        padding: 5rem 3rem;
    }

    /* Two section grid template */
    .two-section-grid {
        display: flex;
        flex-direction: column;
    }

    /* CONTAINERS */
    .contact-container {
        display: flex;
        flex-direction: column;
    }

    .team-container {
        flex-direction: column;
    }
}

